force-app/main/default/objects/Opportunity/fields/N_Ftes__c.field-meta.xml
<CustomField>
    <fullName>N_Ftes__c</fullName>
    <description>Numero de personas que se estiman necesarias para la ejecución del posible proyecto.</description>
    <inlineHelpText>Numero de personas que se estiman necesarias para la ejecución del posible proyecto.
Responsable Delivery Center</inlineHelpText>
    <label>Nº Ftes</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>