force-app/main/default/objects/Opportunity/fields/Negocio__c.field-meta.xml
<CustomField>
    <fullName>Negocio__c</fullName>
    <label>Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Administración estatal</fullName>
            </value>
            <value>
                <fullName>Administración regional</fullName>
            </value>
            <value>
                <fullName>Administración local</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Banca y Seguro</fullName>
            </value>
            <value>
                <fullName>Industria</fullName>
            </value>
            <value>
                <fullName>Servicios</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>SP - Andalucia Hacienda y Sanidad</fullName>
            </value>
            <value>
                <fullName>SP - Andalucia Empleo Justicia</fullName>
            </value>
            <value>
                <fullName>SP - Andalucia Mid Market</fullName>
            </value>
            <value>
                <fullName>SP - Andalucia Educacion</fullName>
            </value>
            <value>
                <fullName>SP - Madrid 1</fullName>
            </value>
            <value>
                <fullName>SP - Madrid 2</fullName>
            </value>
            <value>
                <fullName>SP - Cataluña</fullName>
            </value>
            <value>
                <fullName>SP - Norte de España</fullName>
            </value>
            <value>
                <fullName>SP - Sur de España</fullName>
            </value>
            <value>
                <fullName>Obras viales</fullName>
            </value>
            <value>
                <fullName>Arquitectura y management</fullName>
            </value>
            <value>
                <fullName>Ferrocarriles</fullName>
            </value>
            <value>
                <fullName>Instalaciones del transporte</fullName>
            </value>
            <value>
                <fullName>Obras hidráulicas</fullName>
            </value>
            <value>
                <fullName>Planificación y medio ambiente</fullName>
            </value>
            <value>
                <fullName>Estructuras</fullName>
            </value>
            <value>
                <fullName>Ingeniería del terreno</fullName>
            </value>
            <value>
                <fullName>Gestión territorial</fullName>
            </value>
            <value>
                <fullName>Aeropuertos</fullName>
            </value>
            <value>
                <fullName>Supervisión de obras</fullName>
            </value>
            <value>
                <fullName>Ingeniería de Fabricación</fullName>
            </value>
            <value>
                <fullName>Diseño y Certificación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>