force-app/main/default/objects/Opportunity/fields/NegocioReadOnly__c.field-meta.xml
<CustomField>
    <fullName>NegocioReadOnly__c</fullName>
    <formula>TEXT(Negocio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Negocio de la anterior organización (31/12/2021)</inlineHelpText>
    <label>Negocio</label>
    <type>Text</type>
</CustomField>