force-app/main/default/objects/Opportunity/fields/New_Proyecto_Inductor_1__c.field-meta.xml
<CustomField>
    <fullName>New_Proyecto_Inductor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Proyecto Inductor 1</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (New Proyecto Inductor 1)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>