force-app/main/default/objects/Opportunity/fields/New_Proyecto_Inductor_2__c.field-meta.xml
<CustomField>
    <fullName>New_Proyecto_Inductor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Proyecto Inductor 2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (New Proyecto Inductor 2)</relationshipLabel>
    <relationshipName>Opportunities_2</relationshipName>
    <type>Lookup</type>
</CustomField>