force-app/main/default/objects/Opportunity/fields/New_Proyecto_Inductor_3__c.field-meta.xml
<CustomField>
    <fullName>New_Proyecto_Inductor_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Proyecto Inductor 3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (New Proyecto Inductor 3)</relationshipLabel>
    <relationshipName>Opportunities_3</relationshipName>
    <type>Lookup</type>
</CustomField>