force-app/main/default/objects/Opportunity/fields/Nuevo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nuevo Cliente</label>
    <type>Checkbox</type>
</CustomField>