force-app/main/default/objects/Opportunity/fields/NUMOPORT__c.field-meta.xml
<CustomField>
    <fullName>NUMOPORT__c</fullName>
    <label>Número Oportunidad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>