force-app/main/default/objects/Opportunity/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objetivo</label>
    <referenceTo>Objetivo__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades_del_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>