force-app/main/default/objects/Opportunity/fields/Objetivo_del_proyecto__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_del_proyecto__c</fullName>
    <label>Objetivo del proyecto</label>
    <type>TextArea</type>
</CustomField>