force-app/main/default/objects/Opportunity/fields/Observaciones_Administrador__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Administrador__c</fullName>
    <label>Observaciones Administrador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>