force-app/main/default/objects/Opportunity/fields/Oferta_SAP__c.field-meta.xml
<CustomField>
    <fullName>Oferta_SAP__c</fullName>
    <inlineHelpText>SAP or Company Bid Code</inlineHelpText>
    <label>Código Oferta SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>