force-app/main/default/objects/Opportunity/fields/Oportunidad_Origen__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>diferente a la oportunidad matriz de las extensiones</description>
    <inlineHelpText>Oportunidad de la que proviene</inlineHelpText>
    <label>Oportunidad Origen</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades (Oportunidad Origen)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>