force-app/main/default/objects/Opportunity/fields/Oportunidad_Padre__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Extensión de desglose a la que se le ha creado una extensión rectificativa</inlineHelpText>
    <label>Oportunidad Padre</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities Ayesa (Oportunidad Padre)</relationshipLabel>
    <relationshipName>Opportunities_Ayesa</relationshipName>
    <type>Lookup</type>
</CustomField>