force-app/main/default/objects/Opportunity/fields/Oportunidad_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Establece relación entre oportunidades individuales con la oferta marco u oferta interco a la que pertenecen.</description>
    <inlineHelpText>Establece relación entre oportunidades individuales con la oferta marco u oferta interco a la que pertenecen.</inlineHelpText>
    <label>Oportunidad Matriz</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades Relacionadas</relationshipLabel>
    <relationshipName>Oportunidades_Relacionadas</relationshipName>
    <type>Lookup</type>
</CustomField>