force-app/main/default/objects/Opportunity/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <inlineHelpText>SOFT=Contratación &quot;pura&quot; de origen cartera, Prórrogas

HARD=Contratación &quot;pura&quot; sin origen cartera

STOCK=Contratación &quot;guardada&quot; sin hecho relevante</inlineHelpText>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>