force-app/main/default/objects/Opportunity/fields/Owner_Rol__c.field-meta.xml
<CustomField>
    <fullName>Owner_Rol__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Rol</label>
    <type>Text</type>
</CustomField>