force-app/main/default/objects/Opportunity/fields/Pais_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Pais_del_cliente__c</fullName>
    <formula>Account.Literal_Pais_Oportunidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País del cliente</label>
    <type>Text</type>
</CustomField>