force-app/main/default/objects/Opportunity/fields/Pais_del_cliente_codigo__c.field-meta.xml
<CustomField>
    <fullName>Pais_del_cliente_codigo__c</fullName>
    <formula>TEXT(Cliente__r.Pais__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País del cliente código</label>
    <type>Text</type>
</CustomField>