force-app/main/default/objects/Opportunity/fields/Pais_IT_Literal__c.field-meta.xml
<CustomField>
    <fullName>Pais_IT_Literal__c</fullName>
    <label>País IT Literal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>