force-app/main/default/objects/Opportunity/fields/Perfil_cambia_estado_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Perfil_cambia_estado_opportunity__c</fullName>
    <label>Perfil cambia estado opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>