force-app/main/default/objects/Opportunity/fields/Porcentaje_Cross_Selling__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Cross_Selling__c</fullName>
    <label>Porcentaje Sinergia</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>