force-app/main/default/objects/Opportunity/fields/Probabilidad__c.field-meta.xml
<CustomField>
    <fullName>Probabilidad__c</fullName>
    <inlineHelpText>Porcentaje libre hasta avanzar a la etapa Negociación y cierre</inlineHelpText>
    <label>Probabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0%</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10%</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30%</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>50%</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>70%</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90%</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>100%</label>
            </value>
            <value>
                <fullName>0,00%</fullName>
                <isActive>false</isActive>
                <label>0,00%</label>
            </value>
            <value>
                <fullName>1%</fullName>
                <isActive>false</isActive>
                <label>1%</label>
            </value>
            <value>
                <fullName>1,00%</fullName>
                <isActive>false</isActive>
                <label>1,00%</label>
            </value>
            <value>
                <fullName>10,00%</fullName>
                <isActive>false</isActive>
                <label>10,00%</label>
            </value>
            <value>
                <fullName>100,00%</fullName>
                <isActive>false</isActive>
                <label>100,00%</label>
            </value>
            <value>
                <fullName>13%</fullName>
                <isActive>false</isActive>
                <label>13%</label>
            </value>
            <value>
                <fullName>15%</fullName>
                <isActive>false</isActive>
                <label>15%</label>
            </value>
            <value>
                <fullName>15,00%</fullName>
                <isActive>false</isActive>
                <label>15,00%</label>
            </value>
            <value>
                <fullName>2,00%</fullName>
                <isActive>false</isActive>
                <label>2,00%</label>
            </value>
            <value>
                <fullName>20</fullName>
                <isActive>false</isActive>
                <label>20</label>
            </value>
            <value>
                <fullName>20%</fullName>
                <isActive>false</isActive>
                <label>20%</label>
            </value>
            <value>
                <fullName>20,00%</fullName>
                <isActive>false</isActive>
                <label>20,00%</label>
            </value>
            <value>
                <fullName>25</fullName>
                <isActive>false</isActive>
                <label>25</label>
            </value>
            <value>
                <fullName>25%</fullName>
                <isActive>false</isActive>
                <label>25%</label>
            </value>
            <value>
                <fullName>25,00%</fullName>
                <isActive>false</isActive>
                <label>25,00%</label>
            </value>
            <value>
                <fullName>30,00%</fullName>
                <isActive>false</isActive>
                <label>30,00%</label>
            </value>
            <value>
                <fullName>33%</fullName>
                <isActive>false</isActive>
                <label>33%</label>
            </value>
            <value>
                <fullName>33,00%</fullName>
                <isActive>false</isActive>
                <label>33,00%</label>
            </value>
            <value>
                <fullName>35</fullName>
                <isActive>false</isActive>
                <label>35</label>
            </value>
            <value>
                <fullName>35%</fullName>
                <isActive>false</isActive>
                <label>35%</label>
            </value>
            <value>
                <fullName>35,00%</fullName>
                <isActive>false</isActive>
                <label>35,00%</label>
            </value>
            <value>
                <fullName>40</fullName>
                <isActive>false</isActive>
                <label>40</label>
            </value>
            <value>
                <fullName>40%</fullName>
                <isActive>false</isActive>
                <label>40%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>