force-app/main/default/objects/Opportunity/fields/Producci_n_estimada_a_o_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Producci_n_estimada_a_o_oportunidad__c</fullName>
    <inlineHelpText>Estimate that production would provide this opportunity this current year.  Very useful for making the LAF (Latest Annual forecast) in €.</inlineHelpText>
    <label>Producción estimada año oportunidad (€)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>