force-app/main/default/objects/Opportunity/fields/Programa_Inductor__c.field-meta.xml
<CustomField>
    <fullName>Programa_Inductor__c</fullName>
    <description>Información del programa de I+D+i</description>
    <inlineHelpText>Información del programa de I+D+i</inlineHelpText>
    <label>Programa Inductor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>