force-app/main/default/objects/Opportunity/fields/Propietario_custom__c.field-meta.xml
<CustomField>
    <fullName>Propietario_custom__c</fullName>
    <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario</label>
    <type>Text</type>
</CustomField>