force-app/main/default/objects/Opportunity/fields/Proyecto_Inductor_3__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Inductor_3__c</fullName>
    <description>Proyecto inductor asociado</description>
    <inlineHelpText>Proyecto inductor asociado</inlineHelpText>
    <label>Proyecto Inductor 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>