force-app/main/default/objects/Opportunity/fields/Referencia_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Comercial__c</fullName>
    <label>¿Es referencia comercial?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No, por no ser relevante</fullName>
            </value>
            <value>
                <fullName>No, porque ya existe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>