force-app/main/default/objects/Opportunity/fields/Referencia_Comercial_lookup__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Comercial_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referencia Comercial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencia_Comercial__c.Clic_comercial__c</field>
            <operation>equals</operation>
            <valueField>$Source.Cliente__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referencia_Comercial__c</referenceTo>
    <relationshipLabel>Oportunidades relacionadas</relationshipLabel>
    <relationshipName>Oportunidades_relacionadas_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>