force-app/main/default/objects/Opportunity/fields/Referencia_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Referencia_del_Cliente__c</fullName>
    <description>Referencia / Nº de Expediente del Cliente</description>
    <inlineHelpText>Client Reference / Report No.</inlineHelpText>
    <label>Referencia del Cliente</label>
    <length>150</length>
    <type>Text</type>
</CustomField>