force-app/main/default/objects/Opportunity/fields/Rentabilidad__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidad__c</fullName>
    <label>Rentabilidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>