force-app/main/default/objects/Opportunity/fields/Rentabilidad_Mtto_HW__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidad_Mtto_HW__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rentabilidad Mtto. HW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>