force-app/main/default/objects/Opportunity/fields/Rentabilidad_Serv__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidad_Serv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rentabilidad Servicio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>