force-app/main/default/objects/Opportunity/fields/RENTPPTO__c.field-meta.xml
<CustomField>
    <fullName>RENTPPTO__c</fullName>
    <label>% Rentabilidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>