force-app/main/default/objects/Opportunity/fields/Responsable_AJI__c.field-meta.xml
<CustomField>
    <fullName>Responsable_AJI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Asesoría Jurídica</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades4_del_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>