force-app/main/default/objects/Opportunity/fields/Responsable_de_Proyecto_Email__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_Proyecto_Email__c</fullName>
    <label>Responsable de Proyecto (Email)</label>
    <type>Email</type>
</CustomField>