force-app/main/default/objects/Opportunity/fields/Responsable_de_Proyecto_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_Proyecto_Nombre__c</fullName>
    <label>Responsable de Proyecto (Nombre)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>