force-app/main/default/objects/Opportunity/fields/Responsable_Fundaci_n_Iberm_tica__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Fundaci_n_Iberm_tica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsable de la Fundación Ibermática</description>
    <label>Responsable Fundación Ibermática</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidadesp5T7</relationshipName>
    <type>Lookup</type>
</CustomField>