force-app/main/default/objects/Opportunity/fields/Responsable_linea_de_servicio__c.field-meta.xml
<CustomField>
    <fullName>Responsable_linea_de_servicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Delivery Center</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades2_del_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>