force-app/main/default/objects/Opportunity/fields/Responsable_Tecnico_de_la_Oferta__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Tecnico_de_la_Oferta__c</fullName>
    <description>Responsable Técnico de la Oferta</description>
    <inlineHelpText>Responsable Técnico de la Oferta</inlineHelpText>
    <label>Responsable Técnico de la Oferta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>