force-app/main/default/objects/Opportunity/fields/Riesgos_fundamentales__c.field-meta.xml
<CustomField>
    <fullName>Riesgos_fundamentales__c</fullName>
    <inlineHelpText>Principales riesgos identificados en relación a la presentación de la oferta y/o en la propia ejecución del contrato, en caso de ser adjudicatarios.</inlineHelpText>
    <label>Riesgos fundamentales</label>
    <type>TextArea</type>
</CustomField>