force-app/main/default/objects/Opportunity/fields/RUP__c.field-meta.xml
<CustomField>
    <fullName>RUP__c</fullName>
    <label>RUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>